# Talend_Health_Audit_Tool

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
backend/: .env.example  main.py  requirements-dev.txt  requirements.txt
backend/agents/: __init__.py  base.py  pipeline.py
backend/agents/dashboard_agent/: __init__.py  agent.py  aggregator.py  models.py  scoring.py
backend/agents/parser_agent/: __init__.py  agent.py  models.py  (+2 more)
backend/config/: classification_config.json  scoring_config.json  severity_overrides.json
backend/core/: exceptions.py  logging.py
backend/execution_logs/: models.py  processor.py  upload_handler.py
backend/langgraph/: __init__.py  state.py  visualization.py  workflow.py
backend/rag/: __init__.py  documents.py  embeddings.py  knowledge_base.py  registry.py  retriever.py  vector_store.py
backend/rule_engine/: __init__.py  engine.py  models.py
backend/schemas/: analysis.py  chat.py  dashboard.py  execution_logs.py  upload.py
backend/services/: analysis_service.py  chat_service.py  dashboard_service.py  execution_log_service.py  execution_service.py  upload_service.py
backend/shared/: __init__.py  execution.py  logger.py  models.py  utils.py
backend/tests/: conftest.py  test_integration.py
docs/: migration_scoring_config.md  migration_severity_model.md  risk_index_references.md
frontend/: .env.example  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: chat.ts  config.ts  dashboard.ts  execution-logs.ts  tasks.ts  upload.ts
(+88 files in other folders)
